--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Income Equity & Affordability Analyzer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Analyzer for income equity and affordability" />
+    <meta name="author" content="Emilio L. Aleman, Ayman Alabbasi, Bruck Gebre, Joshua Shields" />
 
     <meta property="og:title" content="Income Equity & Affordability Analyzer" />
     <meta property="og:description" content="Analyzer for income equity and affordability" />
